src/main/kotlin/com/example/commerce/common/error/ErrorCode.kt
package com.example.commerce.common.error

/**
 * 전역 에러 응답 코드. RestControllerAdvice에서 HTTP 상태별로 매핑.
 */
enum class ErrorCode(val code: String) {
    PRODUCT_NOT_FOUND("PRODUCT_NOT_FOUND"),
    INVENTORY_NOT_FOUND("INVENTORY_NOT_FOUND"),
    OUT_OF_STOCK("OUT_OF_STOCK"),
    INVALID_REQUEST("INVALID_REQUEST"),
    PAYMENT_NOT_FOUND("PAYMENT_NOT_FOUND"),
    ORDER_NOT_FOUND("ORDER_NOT_FOUND"),
    INVALID_ORDER_STATE_TRANSITION("INVALID_ORDER_STATE_TRANSITION"),
    DATA_INCONSISTENCY("DATA_INCONSISTENCY"),
}
